kubernetes/argocd-apps/artemis/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: artemis
spec:
  selector:
    app.kubernetes.io/name: artemis
    app.kubernetes.io/component: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
