kubernetes/argocd-apps/artemis/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: artemis-default-deny
  namespace: artemis
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: artemis-allow-internal
  namespace: artemis
  labels:
    app.kubernetes.io/name: artemis
spec:
  description: "Allow internal communication between ARTEMIS services"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: artemis
  ingress:
    # Allow from other artemis services
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: artemis
    # Allow from nginx-ingress
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: In
              values:
                - ingress-nginx
    # Allow from Prometheus
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: In
              values:
                - monitoring
  egress:
    # Allow to other artemis services
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: artemis
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Allow external BGP monitoring services
    - toFQDNs:
        - matchPattern: "*.ripe.net"
        - matchPattern: "*.routeviews.org"
        - matchPattern: "*.caida.org"
        - matchName: "ris-live.ripe.net"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
